// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderInlineStart renders 0 1`] = `
Array [
  .c0 {
  border-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStart renders function 1`] = `
Array [
  .c0 {
  border-inline-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStart renders invalid theme path 1`] = `
Array [
  .c0 {
  border-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStart renders negative number 1`] = `
Array [
  .c0 {
  border-inline-start: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-inline-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-inline-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStart renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-inline-start: July;
  }
}

@media April {
  .c0 {
    border-inline-start: August;
  }
}

@media January {
  .c0 {
    border-inline-start: September;
  }
}

@media April {
  .c0 {
    border-inline-start: November;
  }
}

@media June {
  .c0 {
    border-inline-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-inline-start: July;
  }
}

@media April {
  .c0 {
    border-inline-start: August;
  }
}

@media January {
  .c0 {
    border-inline-start: September;
  }
}

@media April {
  .c0 {
    border-inline-start: November;
  }
}

@media June {
  .c0 {
    border-inline-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-start: January;
  }
}

@media April {
  .c0 {
    border-inline-start: December;
  }
}

@media January {
  .c0 {
    border-inline-start: April;
  }
}

@media April {
  .c0 {
    border-inline-start: May;
  }
}

@media June {
  .c0 {
    border-inline-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-start: January;
  }
}

@media April {
  .c0 {
    border-inline-start: December;
  }
}

@media January {
  .c0 {
    border-inline-start: April;
  }
}

@media April {
  .c0 {
    border-inline-start: May;
  }
}

@media June {
  .c0 {
    border-inline-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStart renders postitive number 1`] = `
Array [
  .c0 {
  border-inline-start: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStart renders string 1`] = `
Array [
  .c0 {
  border-inline-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStart renders valid theme path 1`] = `
Array [
  .c0 {
  border-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
